// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an empty queue page: empty queues 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-398 MuiInput-underline-402"
      >
        <div
          class="MuiSelect-root-393"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-394 MuiSelect-selectMenu-395 MuiInput-input-406"
            role="button"
            tabindex="0"
          >
            Queues
          </div>
          <input
            type="hidden"
            value="StationType_Queues"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-411 MuiSelect-icon-397"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-398 MuiInput-underline-402"
        style="margin-left: 1em; min-width: 10em;"
      >
        <div
          class="MuiSelect-root-393"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-394 MuiSelect-selectMenu-395 MuiInput-input-406"
            role="button"
            tabindex="0"
          >
            <span>
              ​
            </span>
          </div>
          <input
            id="queueselect"
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-411 MuiSelect-icon-397"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-435 MuiIconButton-root-429"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-434"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-411"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-438"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-7-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-445"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-7-label"
            class="MuiInput-root-398 MuiInput-formControl-399 MuiInput-underline-402"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-406"
              id="downshift-7-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-411"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the load with no queues: load with no queues 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-62 MuiInput-underline-66"
      >
        <div
          class="MuiSelect-root-57"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-58 MuiSelect-selectMenu-59 MuiInput-input-70"
            role="button"
            tabindex="0"
          >
            Load Station
          </div>
          <input
            type="hidden"
            value="StationType_LoadUnload"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-75 MuiSelect-icon-61"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-62 MuiInput-underline-66"
        style="width: 3em; margin-left: 1em;"
      >
        <input
          class="MuiInput-input-70 MuiInput-inputType-73"
          placeholder="Load Station Number"
          type="number"
          value="4"
        />
      </div>
      <div
        class="MuiFormControl-root-86"
        style="margin-left: 1em;"
      >
        <label
          style="position: absolute; top: 24px; left: 0px; color: rgba(0, 0, 0, 0.54); font-size: 0.9rem;"
        >
          Display queue(s)
        </label>
        <div
          class="MuiInput-root-62 MuiInput-formControl-63 MuiInput-underline-66"
          style="min-width: 10em;"
        >
          <div
            class="MuiSelect-root-57"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              class="MuiSelect-select-58 MuiSelect-selectMenu-59 MuiInput-input-70"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              id="queueselect"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-75 MuiSelect-icon-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-103 MuiIconButton-root-97"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-102"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-75"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-106"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-1-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-86"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            class="MuiInput-root-62 MuiInput-formControl-63 MuiInput-underline-66"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-70"
              id="downshift-1-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-75"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for all inspection: inspection all toolbar 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-286 MuiInput-underline-290"
      >
        <div
          class="MuiSelect-root-281"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-282 MuiSelect-selectMenu-283 MuiInput-input-294"
            role="button"
            tabindex="0"
          >
            Inspection
          </div>
          <input
            type="hidden"
            value="StationType_Insp"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-299 MuiSelect-icon-285"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-286 MuiInput-underline-290"
        style="margin-left: 1em;"
      >
        <div
          class="MuiSelect-root-281"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-282 MuiSelect-selectMenu-283 MuiInput-input-294"
            role="button"
            tabindex="0"
          >
            <em>
              All
            </em>
          </div>
          <input
            type="hidden"
            value="@@all_inspection_display@@"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-299 MuiSelect-icon-285"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-323 MuiIconButton-root-317"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-322"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-299"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-326"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-5-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-333"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-5-label"
            class="MuiInput-root-286 MuiInput-formControl-287 MuiInput-underline-290"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-294"
              id="downshift-5-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-299"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for all material: all material toolbar 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-230 MuiInput-underline-234"
      >
        <div
          class="MuiSelect-root-225"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-226 MuiSelect-selectMenu-227 MuiInput-input-238"
            role="button"
            tabindex="0"
          >
            All Material
          </div>
          <input
            type="hidden"
            value="StationType_AllMaterial"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-243 MuiSelect-icon-229"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-267 MuiIconButton-root-261"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-266"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-243"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-270"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-4-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-277"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-4-label"
            class="MuiInput-root-230 MuiInput-formControl-231 MuiInput-underline-234"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-238"
              id="downshift-4-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-243"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for load with one queue: load with one queue 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-6 MuiInput-underline-10"
      >
        <div
          class="MuiSelect-root-1"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-2 MuiSelect-selectMenu-3 MuiInput-input-14"
            role="button"
            tabindex="0"
          >
            Load Station
          </div>
          <input
            type="hidden"
            value="StationType_LoadUnload"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-19 MuiSelect-icon-5"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-6 MuiInput-underline-10"
        style="width: 3em; margin-left: 1em;"
      >
        <input
          class="MuiInput-input-14 MuiInput-inputType-17"
          placeholder="Load Station Number"
          type="number"
          value="4"
        />
      </div>
      <div
        class="MuiFormControl-root-30"
        style="margin-left: 1em;"
      >
        <div
          class="MuiInput-root-6 MuiInput-formControl-7 MuiInput-underline-10"
          style="min-width: 10em;"
        >
          <div
            class="MuiSelect-root-1"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              class="MuiSelect-select-2 MuiSelect-selectMenu-3 MuiInput-input-14"
              role="button"
              tabindex="0"
            >
              a
            </div>
            <input
              id="queueselect"
              type="hidden"
              value="a"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-19 MuiSelect-icon-5"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-47 MuiIconButton-root-41"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-46"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-19"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-50"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-0-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-30"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            class="MuiInput-root-6 MuiInput-formControl-7 MuiInput-underline-10"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-14"
              id="downshift-0-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-19"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for load with three queues: load toolbar 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-118 MuiInput-underline-122"
      >
        <div
          class="MuiSelect-root-113"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-126"
            role="button"
            tabindex="0"
          >
            Load Station
          </div>
          <input
            type="hidden"
            value="StationType_LoadUnload"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-131 MuiSelect-icon-117"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-118 MuiInput-underline-122"
        style="width: 3em; margin-left: 1em;"
      >
        <input
          class="MuiInput-input-126 MuiInput-inputType-129"
          placeholder="Load Station Number"
          type="number"
          value="4"
        />
      </div>
      <div
        class="MuiFormControl-root-142"
        style="margin-left: 1em;"
      >
        <div
          class="MuiInput-root-118 MuiInput-formControl-119 MuiInput-underline-122"
          style="min-width: 10em;"
        >
          <div
            class="MuiSelect-root-113"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              class="MuiSelect-select-114 MuiSelect-selectMenu-115 MuiInput-input-126"
              role="button"
              tabindex="0"
            >
              a, b, c
            </div>
            <input
              id="queueselect"
              type="hidden"
              value="a,b,c"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-131 MuiSelect-icon-117"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-159 MuiIconButton-root-153"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-158"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-131"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-162"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-2-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-142"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-2-label"
            class="MuiInput-root-118 MuiInput-formControl-119 MuiInput-underline-122"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-126"
              id="downshift-2-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-131"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for queue page with three queues: queue toolbar 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-454 MuiInput-underline-458"
      >
        <div
          class="MuiSelect-root-449"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-450 MuiSelect-selectMenu-451 MuiInput-input-462"
            role="button"
            tabindex="0"
          >
            Queues
          </div>
          <input
            type="hidden"
            value="StationType_Queues"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-467 MuiSelect-icon-453"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-454 MuiInput-underline-458"
        style="margin-left: 1em; min-width: 10em;"
      >
        <div
          class="MuiSelect-root-449"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-450 MuiSelect-selectMenu-451 MuiInput-input-462"
            role="button"
            tabindex="0"
          >
            a, b, c
          </div>
          <input
            id="queueselect"
            type="hidden"
            value="a,b,c"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-467 MuiSelect-icon-453"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-491 MuiIconButton-root-485"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-490"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-467"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-494"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-8-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-501"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-8-label"
            class="MuiInput-root-454 MuiInput-formControl-455 MuiInput-underline-458"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-462"
              id="downshift-8-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-467"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for single inspection type: inspection i1 selected toolbar 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-342 MuiInput-underline-346"
      >
        <div
          class="MuiSelect-root-337"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-338 MuiSelect-selectMenu-339 MuiInput-input-350"
            role="button"
            tabindex="0"
          >
            Inspection
          </div>
          <input
            type="hidden"
            value="StationType_Insp"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-355 MuiSelect-icon-341"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInput-root-342 MuiInput-underline-346"
        style="margin-left: 1em;"
      >
        <div
          class="MuiSelect-root-337"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-338 MuiSelect-selectMenu-339 MuiInput-input-350"
            role="button"
            tabindex="0"
          >
            <em>
              All
            </em>
          </div>
          <input
            type="hidden"
            value="@@all_inspection_display@@"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-355 MuiSelect-icon-341"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-379 MuiIconButton-root-373"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-378"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-355"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-382"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-6-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-389"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-6-label"
            class="MuiInput-root-342 MuiInput-formControl-343 MuiInput-underline-346"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-350"
              id="downshift-6-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-355"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`displays the toolbar for wash: wash toolbar 1`] = `
<div>
  <nav
    style="display: flex; background-color: rgb(224, 224, 224); padding-left: 24px; padding-right: 24px; padding-bottom: 4px; height: 2.5em; align-items: flex-end;"
  >
    <div
      style="display: flex; align-items: flex-end;"
    >
      <div
        class="MuiInput-root-174 MuiInput-underline-178"
      >
        <div
          class="MuiSelect-root-169"
        >
          <div
            aria-haspopup="true"
            aria-pressed="false"
            class="MuiSelect-select-170 MuiSelect-selectMenu-171 MuiInput-input-182"
            role="button"
            tabindex="0"
          >
            Wash
          </div>
          <input
            type="hidden"
            value="StationType_Wash"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-187 MuiSelect-icon-173"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root-211 MuiIconButton-root-205"
        style="height: 25px;"
        tabindex="0"
        title="Scan QR Code"
        type="button"
      >
        <span
          class="MuiIconButton-label-210"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-187"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="3.2"
            />
            <path
              d="M9 2L7.17 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2h-3.17L15 2H9zm3 15c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root-214"
        />
      </button>
    </div>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="downshift-3-label"
        role="combobox"
        style="position: relative;"
      >
        <div
          class="MuiFormControl-root-221"
        >
          <div
            aria-autocomplete="list"
            aria-labelledby="downshift-3-label"
            class="MuiInput-root-174 MuiInput-formControl-175 MuiInput-underline-178"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInput-input-182"
              id="downshift-3-input"
              placeholder="Operator"
              type="text"
              value="o1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-187"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
